tests/snapshots/examples_fixtures/type_system__85_hm_module_generic_call_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/85_hm_module_generic_call_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
