tests/snapshots/examples_fixtures/type_system__86_type_adt_sugar_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/86_type_adt_sugar_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
