tests/snapshots/examples_fixtures/type_system__87_type_adt_sugar_module_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/87_type_adt_sugar_module_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
