tests/snapshots/examples_fixtures/type_system__88_match_bool_exhaustive_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/88_match_bool_exhaustive_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
