tests/snapshots/examples_fixtures/type_system__89_match_list_exhaustive_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/89_match_list_exhaustive_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
