tests/snapshots/examples_fixtures/type_system__90_match_guarded_with_fallback_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/90_match_guarded_with_fallback_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
