tests/snapshots/examples_fixtures/type_system__91_match_tuple_with_catchall_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/91_match_tuple_with_catchall_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
