tests/snapshots/examples_fixtures/type_system__93_adt_generic_constructor_hm_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/93_adt_generic_constructor_hm_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
