tests/snapshots/examples_fixtures/type_system__94_adt_module_factory_boundary_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/94_adt_module_factory_boundary_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
