tests/snapshots/examples_fixtures/type_system__95_adt_generic_nested_pattern_hm_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/95_adt_generic_nested_pattern_hm_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
