tests/snapshots/examples_fixtures/type_system__97_guarded_wildcard_with_fallback_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/97_guarded_wildcard_with_fallback_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
