tests/snapshots/examples_fixtures/type_system__98_match_nested_tuple_with_catchall_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/98_match_nested_tuple_with_catchall_ok.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
